# HEPDash

./: README.md  setup.cfg  setup.py
Practice/: hep_slider.py  selectbox_example.py  slider_example.py  st1.py  st_driver.py  t1.py  t2.py
examples/: specifics.yml
pip-wheel-metadata/hepdash.dist-info/: top_level.txt
src/: Apps.py  Apps2.py  Histogram_Apps.py  Histogram_Classes.py  PlotHist.py  PlotHist_autobin.py  PlotHist_plotall.py  PlotHist_plotall_separate.py  Plot_Multi.py  Plot_Multi2.py  Plot_Multi3.py  Plot_Multi4.py  Plot_Multi_2column.py  Plot_Multi_2columnC.py  Plot_Multi_2columnD.py  Plot_Multi_basic.py  Plotting_Histograms.py  Tree_Apps.py  Tree_Apps2.py  Tree_Apps3.py  Tree_AppsB.py  apptest.py  make_premade_comparison_app.py
src/Alt_Test_191221/: Histogram_Classes.py  Plot_Multi_2columnC.py  Plotters.py  Tree_Apps3.py  make_premade_comparison_app.py
src/HEPDash/: BiColumn.py  Tree_Apps.py  make_premade_comparison_app.py  test.py
src/HEPDash.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/current/: Histogram_Classes.py  Plotters.py  Tree_Apps.py  make_general_comparison_app.py  make_premade_comparison_app.py
src/hepdash/: make_tree.py  make_tree_app.py  make_tree_argparse.py  make_tree_minimal.py  parse_config.py  test.py
src/hepdash.egg-info/: PKG-INFO  SOURCES.txt
src/hepdash/apps/: Histogram_Apps.py  Tree_Apps.py
src/hepdash/funcs/: config1.yml  make_general_comparison_app.py  make_general_comparison_app_new.py  make_premade_comparison_app.py  make_premade_comparison_app_new.py  make_tree.py
src/hepdash/histograms/: Plotters.py  (+2 more)
(+1 files in other folders)
