[metadata]
name = hepdash
version = 0.0.2
author = Ethan Simpson
author_email = ethansimpson285@gmail.com
description = Display histograms from ROOT files in an interactive web environment
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ethansimpson285/HEPDash
project_urls =
    Bug Tracker = https://github.com/ethansimpson285/HEPDash/issues

platforms = Linux
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
